# uni_db_interface

./: CMakeLists.txt  Db.cpp  Db.h  Grade.cpp  Grade.h  Group.cpp  Group.h  Module.cpp  Module.h  Persistable.h  Person.cpp  Person.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  Utils.cpp  Utils.h  ddl_script.sql  main.cpp
